# docs/swagger.json
@@ -136,7 +136,7 @@
                 }
             }
         },
-        "/api/v1/dialogs": {
+        "/api/v1/dialog": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -147,7 +147,7 @@
                 "tags": [
                     "dialog"
                 ],
-                "summary": "get user dialogs",
+                "summary": "get dialog message",
                 "operationId": "dialog",
                 "responses": {
                     "200": {
@@ -268,7 +268,7 @@
                 }
             }
         },
-        "/api/v1/tags": {
+        "/api/v1/tag": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -631,6 +631,9 @@
                 "id": {
                     "type": "integer"
                 },
+                "last_message": {
+                    "$ref": "#/definitions/model.Message"
+                },
                 "user1_id": {
                     "type": "integer"
                 },
@@ -644,6 +647,26 @@
             "properties": {
                 "liked_to_user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "model.Message": {
+            "type": "object",
+            "properties": {
+                "dialog_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "message_text": {
+                    "type": "string"
+                },
+                "sender_id": {
+                    "type": "integer"
+                },
+                "timestamp": {
+                    "type": "string"
                 }
             }
         },
