# pkg/handler/handler.go
@@ -44,7 +44,7 @@ func (h *Handler) InitRoutes() http.Handler {
 	apiRouter.HandleFunc("/user/photo", h.updateUserPhoto).Methods("POST", "OPTIONS")
 	apiRouter.HandleFunc("/user/photo", h.deleteUserPhoto).Methods("DELETE")
 	apiRouter.HandleFunc("/like", h.createLike).Methods("POST", "OPTIONS")
-	apiRouter.HandleFunc("/dialog", h.getDialogs).Methods("GET")
+	apiRouter.HandleFunc("/dialogs", h.getDialogs).Methods("GET")
 	apiRouter.HandleFunc("/tag", h.getAllTags).Methods("GET")
 
 	r.Use(
